--- a/EqUiWebUi/Areas/Alert/Views/Alert/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Edit.cshtml
@@ -5,131 +5,189 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Edit</h2>
-@Model.c_triggers.alertType
-@Model.c_triggers.discription
+<h2>Edit this alert</h2>
+
+<div class="form-horizontal">
+    <hr />
+    <h4>Information about this alert trigger type (id:@Model.c_triggers.id)</h4>
+    <div class="form-group">
+        @Html.LabelFor(model => model.c_triggers.alertType, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.c_triggers.alertType, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.c_triggers.discription, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.c_triggers.discription, new { htmlAttributes = new { @class = "form-control" } })
+        </div>
+    </div>
+</div>
+
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>User edit form for alerts</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.id)
+    <div class="form-horizontal">
+        <hr />
+        <h4>Information about this alert (id:@Model.id)</h4>
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.id)
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.C_timestamp, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.C_timestamp, new { htmlAttributes = new { @class = "form-control" } })
+        <div class="form-group">
+            @Html.LabelFor(model => model.location, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DisplayFor(model => model.location, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.info, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DisplayFor(model => model.info, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.C_timestamp, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DisplayFor(model => model.C_timestamp, new { htmlAttributes = new { @class = "form-control" } })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.state, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-2">
+                @Html.DropDownList("state", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.state, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @if (Model.comments == null)
+                {
+                    <h6 class='card-subtitle mb-2 text-muted'>no comments....</h6>
+                }
+                else
+                {
+                    @Html.Raw(Model.comments)
+                }
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <textarea id="comments" name="comments"></textarea>
+                @Html.ValidationMessageFor(model => model.comments, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Save" class="btn btn-default" />
+            </div>
+            <div>
+                @Html.ActionLink("Back to List", "Listalerts")
+            </div>
         </div>
     </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.info, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.info, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.state, "state", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DropDownList("state", null, htmlAttributes: new { @class = "form-control" })
-            @Html.ValidationMessageFor(model => model.state, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.location, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.location, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.Raw(Model.comments)
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.comments, "add comments", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            <textarea id="comments" name="comments"></textarea>
-            @Html.ValidationMessageFor(model => model.comments, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.acceptUserID, "acceptUserID", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.AcceptUser.username, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.acceptTimestamp, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.acceptTimestamp, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.closeUserID, "closeUserID", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.CloseUser.username, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.closeTimestamp, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.closeTimestamp, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.ChangedUser.username, "lastChangedUserID", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.ChangedUser.username, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.lastChangedTimestamp, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.lastChangedTimestamp, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.triggerCount, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.triggerCount, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.lastTriggerd, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.DisplayFor(model => model.lastTriggerd, new { htmlAttributes = new { @class = "form-control" } })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Save" class="btn btn-default" />
-        </div>
-    </div>
-</div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Listalerts")
-</div>
+    <div class="form">
+        <hr />
+        <h4>some more information</h4>
+        <div class="row">
+            <div class="form-group col-md-5">
+                <div class="col-md-5">
+                    @Html.LabelFor(model => model.acceptUserID, htmlAttributes: new { @class = "control-label col-md-2" })
+                </div>
+                <div class="col-md-5">
+                    @Html.DisplayFor(model => model.AcceptUser.username, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+
+            <div class="form-group col-md-5">
+                <div class="col-md-5">
+                    @Html.LabelFor(model => model.acceptTimestamp, htmlAttributes: new { @class = "control-label col-md-2" })
+                </div>
+                <div class="col-md-5">
+                    @Html.DisplayFor(model => model.acceptTimestamp, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+        </div>
+
+        <br />
+
+        <div class="row">
+            <div class="form-group col-md-5">
+                <div class="col-md-5">
+                    @Html.LabelFor(model => model.closeUserID, htmlAttributes: new { @class = "control-label col-md-2" })
+                </div>
+                <div class="col-md-5">
+                    @Html.DisplayFor(model => model.CloseUser.username, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+
+            <div class="form-group col-md-5">
+                <div class="col-md-5">
+                    @Html.LabelFor(model => model.closeTimestamp, htmlAttributes: new { @class = "control-label col-md-2" })
+                </div>
+                <div class="col-md-5">
+                    @Html.DisplayFor(model => model.closeTimestamp, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+        </div>
+
+        <br />
+
+        <div class="row">
+            <div class="form-group col-md-5">
+                <div class="col-md-5">
+                    @Html.LabelFor(model => model.ChangedUser.username, htmlAttributes: new { @class = "control-label col-md-2" })
+                </div>
+                <div class="col-md-5">
+                    @Html.DisplayFor(model => model.ChangedUser.username, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+
+            <div class="form-group col-md-5">
+                <div class="col-md-5">
+                    @Html.LabelFor(model => model.lastChangedTimestamp, htmlAttributes: new { @class = "control-label col-md-2" })
+                </div>
+                <div class="col-md-5">
+                    @Html.DisplayFor(model => model.lastChangedTimestamp, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+        </div>
+
+        <br />
+
+        <div class="row">
+            <div class="form-group col-md-5">
+                <div class="col-md-5">
+                    @Html.LabelFor(model => model.triggerCount, htmlAttributes: new { @class = "control-label col-md-2" })
+                </div>
+                <div class="col-md-5">
+                    @Html.DisplayFor(model => model.triggerCount, new { htmlAttributes = new { @class = "form-control" } })
+                </div>
+            </div>
+
+            <div class="form-group col-md-5">
+                <div class="col-md-5">
+                    @Html.LabelFor(model => model.lastTriggerd, htmlAttributes: new { @class = "control-label col-md-2" })
+                 </div>
+                 <div class="col-md-5">
+                        @Html.DisplayFor(model => model.lastTriggerd, new { htmlAttributes = new { @class = "form-control" } })
+                 </div>
+            </div>
+        </div>
+
+    </div>
+
+
+
 
 @section scripts{
     @*https://summernote.org/getting-started/*@
