--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Delete.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Delete.cshtml
@@ -7,17 +7,16 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this trigger?</h3>
 <div>
-    <h4>c_triggers</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.enabled)
+            @Html.DisplayNameFor(model => model.id)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.enabled)
+            @Html.DisplayFor(model => model.id)
         </dd>
 
         <dt>
@@ -27,119 +26,6 @@
         <dd>
             @Html.DisplayFor(model => model.discription)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.sqlStqStatement)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.sqlStqStatement)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.locationThreeMask)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.locationThreeMask)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.smsActivePloeg)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.smsActivePloeg)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.smsActiveStartTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.smsActiveStartTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.smsActiveEndTime)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.smsActiveEndTime)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.smsLimit)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.smsLimit)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.smsSend)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.smsSend)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Pollrate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Pollrate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.alertType)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.alertType)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.classificationMask)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.classificationMask)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AutoSetStateTechComp)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AutoSetStateTechComp)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.smsOnRetrigger)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.smsOnRetrigger)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.c_smsSystem.discription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.c_smsSystem.discription)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.c_state.discription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.c_state.discription)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
