--- a/EqUiWebUi/Areas/Alert/Views/h_alert/Delete.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/h_alert/Delete.cshtml
@@ -7,25 +7,16 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this Alert?</h3>
 <div>
-    <h4>h_alert</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.C_timestamp)
+            @Html.DisplayNameFor(model => model.id)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.C_timestamp)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.info)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.info)
+            @Html.DisplayFor(model => model.id)
         </dd>
 
         <dt>
@@ -37,93 +28,12 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.comments)
+            @Html.DisplayNameFor(model => model.info)
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.comments)
+            @Html.DisplayFor(model => model.info)
         </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.acceptTimestamp)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.acceptTimestamp)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.closeTimestamp)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.closeTimestamp)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.lastChangedTimestamp)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.lastChangedTimestamp)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.triggerCount)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.triggerCount)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.lastTriggerd)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.lastTriggerd)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.c_state.discription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.c_state.discription)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.c_triggers.discription)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.c_triggers.discription)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.ChangedUser.username)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.ChangedUser.username)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.CloseUser.username)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CloseUser.username)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.AcceptUser.username)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.AcceptUser.username)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
