--- a/EqUiWebUi/Views/Gadata/_supervisie.cshtml
+++ b/EqUiWebUi/Views/Gadata/_supervisie.cshtml
@@ -15,4 +15,4 @@
 }).Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
-}).Empty("No data found").Css("table-hover")
+}).Empty("No data found").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleLogtype(row.Logtype))
