--- a/EqUiWebUi/Views/Gadata/_ploegRapport.cshtml
+++ b/EqUiWebUi/Views/Gadata/_ploegRapport.cshtml
@@ -16,4 +16,4 @@
 }).Sortable().Pageable(pager =>
 {
     pager.RowsPerPage = 20;
-}).Empty("No data found").Css("table-hover")
+}).Empty("No data found").Css("table-hover").RowCss(row => MyRowStyling.getRowStyleLogtype(row.Logtype))
