--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -3,8 +3,7 @@
     <h2>Webviews tableau</h2>
     <h5>(data update gebeurd nog NIET automatisch)</h5>
     <h5>(gebruik user: e6308159 pw: e6308159 om in te loggen in tableau)</h5>
-    <h3>Welja ...misschien ooit als IT eindelijk die account aanmaakt... </h3>
-    <div style="width:100%;height:0;padding-bottom:56%;position:relative;"><iframe src="https://giphy.com/embed/ReImZejkBnqYU" width="100%" height="100%" style="position:absolute" frameBorder="0" class="giphy-embed" allowFullScreen></iframe></div><p><a href="https://giphy.com/gifs/angry-computer-frustrated-ReImZejkBnqYU"></a></p>
+    <h3>Welja ...misschien ooit als IT eindelijk die account aanmaakt... INC1939274 </h3>
 </div>
 
 <div>
