--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
@@ -55,25 +55,12 @@ else
                     </div>
                 </div>
 
-
-
-                Dit moet eigenlijk een RunAgainst select list worden .(met enunm input) MISERIE
                 <div class="form-group">
-                    @Html.LabelFor(model => model.RunAgainst, "RunAgainst", htmlAttributes: new { @class = "control-label col-md-2" })
+                    @Html.LabelFor(model => model.RunAgainstDatabase, "RunAgainstDatabase", htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
-                        @* @Html.EnumDropDownListFor(m => m.RunAgainst, "Select a server", new { @class = "form-control" })*@
-                        @Html.ValidationMessageFor(model => model.RunAgainst, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.RunAgainst)s
-                    </div>
-                </div>
-
-                @*temp input*@
-                <div class="form-group">
-                    @Html.LabelFor(model => model.RunAgainst, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.RunAgainst, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.RunAgainst, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.RunAgainst)
+                        @Html.EnumDropDownListFor(m => m.RunAgainstDatabase, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.RunAgainstDatabase, "", new { @class = "text-danger" })
+                        @Html.HelpTextFor(model => model.RunAgainstDatabase)
                     </div>
                 </div>
 
