--- a/EqUiWebUi/Areas/Alert/Views/Alert/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Edit.cshtml
@@ -31,76 +31,85 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <hr />
-        <h4>Information about this alert (id:@Model.id)</h4>
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.id)
+<div class="form-horizontal">
+    <hr />
+    <h4>Information about this alert (id:@Model.id)</h4>
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.id)
+    @Html.HiddenFor(model => model.c_tirgger_id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.location, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DisplayFor(model => model.location, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HelpTextFor(model => model.location)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.info, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DisplayFor(model => model.info, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HelpTextFor(model => model.info)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.C_timestamp, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DisplayFor(model => model.C_timestamp, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.HelpTextFor(model => model.C_timestamp)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.state, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-2">
-                @Html.DropDownList("state", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.state, "", new { @class = "text-danger" })
-                @Html.HelpTextFor(model => model.state)
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @if (Model.comments == null)
-                {
-                    <h6 class='card-subtitle mb-2 text-muted'>no comments....</h6>
-                }
-                else
-                {
-                    @Html.Raw(Model.comments)
-                }
-            </div>
-
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <textarea id="comments" name="comments"></textarea>
-                @Html.ValidationMessageFor(model => model.comments, "", new { @class = "text-danger" })
-                @Html.HelpTextFor(model => model.comments)
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-            <div>
-                @Html.ActionLink("Back to List", "Listalerts")
-            </div>
+    <div class="form-group">
+        @Html.LabelFor(model => model.location, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.location, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HelpTextFor(model => model.location)
         </div>
     </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.locationTree, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.locationTree, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.locationTree, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.info, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.info, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HelpTextFor(model => model.info)
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.C_timestamp, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DisplayFor(model => model.C_timestamp, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.HelpTextFor(model => model.C_timestamp)
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.state, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-2">
+            @Html.DropDownList("state", null, htmlAttributes: new { @class = "form-control" })
+            @Html.ValidationMessageFor(model => model.state, "", new { @class = "text-danger" })
+            @Html.HelpTextFor(model => model.state)
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @if (Model.comments == null)
+            {
+                <h6 class='card-subtitle mb-2 text-muted'>no comments....</h6>
+            }
+            else
+            {
+                @Html.Raw(Model.comments)
+            }
+        </div>
+
+    </div>
+
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <textarea id="comments" name="comments"></textarea>
+            @Html.ValidationMessageFor(model => model.comments, "", new { @class = "text-danger" })
+            @Html.HelpTextFor(model => model.comments)
+        </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" value="Save" class="btn btn-default" />
+        </div>
+        <div>
+            @Html.ActionLink("Back to List", "Listalerts")
+        </div>
+    </div>
+</div>
 }
 
     <div class="form">
