--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
@@ -111,30 +111,6 @@ else
         </div>
 
         <div class="panel panel-primary">
-            <div class="panel-heading">Filters</div>
-            <div class="panel-body">
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.locationThreeMask, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.locationThreeMask, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.locationThreeMask, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.locationThreeMask)
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.classificationMask, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.classificationMask, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.classificationMask, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.classificationMask)
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="panel panel-primary">
             <div class="panel-heading">Sms</div>
             <div class="panel-body">
 
@@ -159,51 +135,6 @@ else
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.smsActivePloeg, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.smsActivePloeg, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.smsActivePloeg, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.smsActivePloeg)
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.smsActiveStartTime, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.smsActiveStartTime, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.smsActiveStartTime, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.smsActiveStartTime)
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.smsActiveEndTime, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.smsActiveEndTime, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.smsActiveEndTime, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.smsActiveEndTime)
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.smsLimit, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.smsLimit, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.smsLimit, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.smsLimit)
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.smsSend, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.smsSend, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.smsSend, "", new { @class = "text-danger" })
-                        @Html.HelpTextFor(model => model.smsSend)
-                    </div>
-                </div>
-
-                <div class="form-group">
                     @Html.LabelFor(model => model.smsOnRetrigger, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
                         <div class="checkbox">
@@ -213,7 +144,9 @@ else
                         </div>
                     </div>
                 </div>
-
+                <div>
+                    @Html.ActionLink("Go to SMS config", "Index", "c_SMSconfig")
+                </div>
             </div>
         </div>
 
