--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocationGrid.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocationGrid.cshtml
@@ -7,7 +7,7 @@
     columns.Add(c => c.LOCATION).Titled("LOCATION").Css("hidden-xs").Filterable(true);
     columns.Add(c => c.STATUS).Titled("STATUS").Css("hidden-md hidden-sm hidden-xs").Filterable(true);
     columns.Add(c => c.STATUSDATE).Titled("STATUSDATE").Formatted("{0:dd-MM-yyyy hh:mm}").Css("hidden-md hidden-sm hidden-xs");
-    columns.Add(c => c.DESCRIPTION).Titled("DESCRIPTION").Sortable(false);
+    columns.Add(c => c.DESCRIPTION).Titled("DESCRIPTION").Sortable(false).Filterable(true);
 
 
 }).Sortable().Pageable(pager =>
