--- a/EqUiWebUi/Views/Gadata/BodyTrackWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/BodyTrackWebgrid.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Models.Bodytracking>
+﻿@model IQueryable<EqUiWebUi.Models.Bodytracking>
 @{
     ViewBag.Title = "BodyTrackWebgrid";
     Layout = "~/Views/Shared/_Layout.cshtml";
