--- a/EqUiWebUi/Views/Home/Settings.cshtml
+++ b/EqUiWebUi/Views/Home/Settings.cshtml
@@ -30,11 +30,23 @@
     <div class="panel-body">
         <p><a href="~/user_management/users/Index" class="btn btn-primary btn-sm">Users &raquo;</a>Beheer van gebruikers</p>
         <p><a href="~/user_management/usersPermisions/Index" class="btn btn-primary btn-sm">UsersPermisions &raquo;</a>Beheer van rechten</p>
-        <p><a href="~/user_management/UserScreens/Index" class="btn btn-primary btn-sm">Screens &raquo;</a>Beheer van schermen. (sommige gebruikers zoals de digiborden hebben voorgedefineerde schermen)</p>
-        <p><a href="~/user_management/UserScreens/Screenmaster" class="btn btn-danger btn-sm">ScreenMaster &raquo;</a>Commandos sturen naar schermen</p>
     </div>
     <div class="panel-footer">
         <h6>Active sessions: @ViewBag.ActiveSessions</h6>
+    </div>
+</div>
+
+<p></p>
+
+<div class="panel panel-warning">
+    <div class="panel-heading">
+        <h4 class="panel-title">Screen managment</h4>
+        <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
+    </div>
+    <div class="panel-body">
+        <p><a href="~/user_management/UserScreens/Index" class="btn btn-primary btn-sm">Screens &raquo;</a>Beheer van schermen. (sommige gebruikers zoals de digiborden hebben voorgedefineerde schermen)</p>
+        <p><a href="~/user_management/UserScreens/Screenmaster" class="btn btn-danger btn-sm">ScreenMaster &raquo;</a>Commandos sturen naar schermen</p>
+        file:////gnlsnm0101.gen.volvocars.net/proj/6308-SHR-VCC22700/LegancyTools/DEPLOYMENTBASE/EqUiDigibordLauncher Config tool om kiosk op te starten.
     </div>
 </div>
 
