--- a/EqUiWebUi/Views/NgacElectrode/TipwearBeforeChange.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/TipwearBeforeChange.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<EqUiWebUi.Models.TipwearBeforeChange>
+﻿@model IQueryable<EqUiWebUi.Models.TipwearBeforeChange>
 
 @*set title*@
 @{
