--- a/EqUiWebUi/Views/NgacElectrode/_TipsChanged.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/_TipsChanged.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<EqUiWebUi.Models.TipMonitor>
+@model IQueryable<EqUiWebUi.Models.TipMonitor>
 
 @Html.Grid(Model).Named("TipsChangedTable").Build(columns =>
 {
