--- a/EqUiWebUi/Views/Tableau/Index.cshtml
+++ b/EqUiWebUi/Views/Tableau/Index.cshtml
@@ -33,7 +33,6 @@
             <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
         </div>
         <div class="panel-body">
-
             <p>
                 <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=Layout_CountofDt" class="btn btn-primary btn-sm">LongTerm_Layout &raquo;</a>
                 layout met aantal storingen
@@ -45,29 +44,9 @@
             </p>
 
             <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=Dash_Tree_Breakdown" class="btn btn-primary btn-sm">LongTerm_Treemap &raquo;</a>
+                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_breakdowns&sheet=ObjectTree" class="btn btn-primary btn-sm">ObjectTree &raquo;</a>
                 Boommap met aantal storingen
             </p>
-        </div>
-    </div>
-    <p></p>
-    <div class="panel panel-primary">
-        <div class="panel-heading">
-            <h4 class="panel-title">Automatische error registratie (VCSC VASC STO)</h4>
-            <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
-        </div>
-        <div class="panel-body">
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_ErrorStoNgac&sheet=ErrorLayoutDashboard" class="btn btn-primary btn-sm">LongTerm_Layout &raquo;</a>
-                layout data van STO (plc) en NGAC (abb robots)
-            </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_ErrorStoNgac&sheet=ErrorTreeLayoutDashboard" class="btn btn-primary btn-sm">LongTerm_Treemap &raquo;</a>
-                Boommap data van STO (plc) en NGAC (abb robots) 
-            </p>
-
         </div>
     </div>
     <p></p>
@@ -77,17 +56,10 @@
             <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
         </div>
         <div class="panel-body">
-
             <p>
                 <a href="~/tableau/EmbeddedDesktop?workbook=EquiEmbedded_Assets&sheet=AssetLayoutDashboard" class="btn btn-primary btn-sm">AssetLayout &raquo;</a>
                 Layout assets (om te zien of alles gemapt is)
             </p>
-
-            <p>
-                <a href="~/tableau/EmbeddedDesktop?workbook=RobSensorData30D&sheet=SensorDash" class="btn btn-primary btn-sm">Gripper sensor faults &raquo;</a>
-                Gripper sensor faults (comau test)
-            </p>
-
         </div>
     </div>
 </div>
@@ -104,18 +76,18 @@
         <div class="panel-body">
 
             <p>
-                <a href="~/tableau/Embedded4K?workbook=4K-digibord-V10&sheet=ErrorLayoutDashboard" class="btn btn-primary btn-sm">4K LongTerm_Layout_STO_NGAC &raquo;</a>
+                <a href="~/tableau/Embedded4K?workbook=EquiEmbedded_breakdowns&sheet=Layout_CountofDt" class="btn btn-primary btn-sm">4K Layout_CountofDt &raquo;</a>
                 Bollen op layout data van STO (plc) en NGAC (abb robots)
             </p>
 
             <p>
-                <a href="~/tableau/Embedded4K?workbook=4K-digibord-V10&sheet=ErrorTreeLayoutDashboard" class="btn btn-primary btn-sm">4K LongTerm_Treemap_STO_NGAC &raquo;</a>
+                <a href="~/tableau/Embedded4K?workbook=EquiEmbedded_breakdowns&sheet=ObjectTree" class="btn btn-primary btn-sm">4K ObjectTree &raquo;</a>
                 Boommap data van STO (plc) en NGAC (abb robots) een top oneindig visualisatie
             </p>
 
             <p>
-                <a href="~/tableau/Embedded4K?workbook=EquiEmbedded_MaximoStw040&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">LongTerm_Layout_STW040_MAXIMO &raquo;</a>
-                Bollen op layout data van STW040 en MAXIMO (ci) (gewoon andere wrapper gebruikt)
+                <a href="~/tableau/Embedded4K?workbook=EquiEmbedded_MaximoStw040&sheet=Dash_MaximoStw040" class="btn btn-primary btn-sm">Dash_MaximoStw040 &raquo;</a>
+                Bollen op layout data van STW040 en MAXIMO (ci)
             </p>
 
         </div>
